--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.26",
     "mongoose": "^8.0.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.0",
@@ -26,6 +27,7 @@
     "razorpay": "^2.9.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
     "zod": "^3.22.0",
