Fix orders, invoices, and catalog seeding

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,9 +33,9 @@
     },
     "allowJs": true,
     "noEmit": true,
-    "incremental": true,
+    "incremental": false,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "plugins": [
       {
         "name": "next"
@@ -46,7 +46,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
