--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "seed": "node scripts/seed.js",
-    "seed:categories": "node scripts/seed-categories.js"
+    "seed:categories": "node scripts/seed-categories.js",
+    "promote:admin": "node scripts/promote-admin.js",
+    "seed:products": "node scripts/seed-products.mjs"
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
@@ -20,9 +22,9 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "mongoose": "^8.0.0",
-    "next": "^14.2.0",
+    "next": "^16.1.6",
     "next-auth": "^4.24.0",
-    "next-cloudinary": "^5.20.0",
+    "next-cloudinary": "^6.17.5",
     "postcss": "^8.4.0",
     "razorpay": "^2.9.0",
     "react": "^18.3.0",
@@ -38,7 +40,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "eslint": "^8.50.0",
+    "eslint": "^9.39.2",
     "eslint-config-next": "^15.0.0",
     "ts-node": "^10.9.2"
   }
